--- a/index.html
+++ b/index.html
@@ -2,8 +2,51 @@
 <html>
 <head>
 	<title>Tic Tac Toe</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body id="container">
+
+
+	<div id="player-one-side">
+		
+		<div id="player-one-score"></div>
+		<div id="player-one-name"> 	</div>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<div id="player-one-move">X</div>
+
+	</div>
+
+	<div id="gameboard">
+		<div id="box1"></div>
+		<div id="box2"></div>
+		<div id="box3"></div>
+		<div id="box4"></div>
+		<div id="box5"></div>
+		<div id="box6"></div>
+		<div id="box7"></div>
+		<div id="box8"></div>
+		<div id="box9"></div>
+		
+	</div>
+
+	<div id="player-two-side"> 
+
+		<div id="player-two-score"></div>
+		<div id="player-two-name">  </div>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<div id="player-two-move">O</div>
+		
+	</div>
+
+</div>
 
 </body>
 </html>
