--- a/index.html
+++ b/index.html
@@ -1,27 +1,43 @@
 <!DOCTYPE html>
 <html>
+
+<!-- HEAD WITH SCRIPTS AND LINKS AND STYLESHEETS AND STUFF-->
 <head>
 	<title>Tic Tac Toe</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/controller.js"></script>
+  	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
-<body id="container">
+
+<!-- END OF HEAD WITH SCRIPTS AND LINKS AND STYLESHEETS AND STUFF-->
+
+<body id="container" ng-app="TicTacToe" ng-controller="MainController as main">
 
 
+<!-- **************** PLAYER ONE NAV BAR **************************** -->
 	<div id="player-one-side">
-		
+	
 		<div id="player-one-score"></div>
-		<div id="player-one-name"> 	</div>
+		<div id="player-one-name"> Fancy</div>
 		<br>
 		<br>
 		<br>
 		<br>
 		<br>
 		<div id="player-one-move">X</div>
+		<br>
+		<br>
 
 	</div>
+<!-- **************** END PLAYER ONE NAV BAR **************** -->
 
+<!-- ******************** GAMEBOARD ************************* -->
 	<div id="gameboard">
-		<div id="box1"></div>
+		<div id="box1">X</div>
 		<div id="box2"></div>
 		<div id="box3"></div>
 		<div id="box4"></div>
@@ -29,14 +45,18 @@
 		<div id="box6"></div>
 		<div id="box7"></div>
 		<div id="box8"></div>
-		<div id="box9"></div>
+		<div id="box9"></div> 
+
+
 		
 	</div>
+<!-- ******************** END OF GAMEBOARD ******************** -->
 
+<!-- ******************** PLAYER TWO NAV BAR ******************** -->
 	<div id="player-two-side"> 
 
 		<div id="player-two-score"></div>
-		<div id="player-two-name">  </div>
+		<div id="player-two-name"> Patrick </div>
 		<br>
 		<br>
 		<br>
@@ -45,8 +65,9 @@
 		<div id="player-two-move">O</div>
 		
 	</div>
+<!-- ******************** END OF PLAYER TWO NAV BAR ***************** -->
 
-</div>
+</div> <!-- END OF CONTAINER -->
 
 </body>
 </html>
