first branch1 commit

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <!-- ******************** GAMEBOARD ************************* -->
 	<div id="gameboard">
-		<div id="box1">X</div>
+		<div id="box1"></div>
 		<div id="box2"></div>
 		<div id="box3"></div>
 		<div id="box4"></div>
