--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
 
 <!-- END OF HEAD WITH SCRIPTS AND LINKS AND STYLESHEETS AND STUFF-->
 
-<body id="container" ng-app="TicTacToe" ng-controller="MainController as main">
+<body id="container" 
+      ng-app="TicTacToe" 
+      ng-controller="MainController as main">
 
 
 <!-- **************** PLAYER ONE NAV BAR **************************** -->
 	<div id="player-one-side">
 	
 		<div id="player-one-score"></div>
-		<div id="player-one-name"> Fancy</div>
+		<div id="player-one-name">Fancy</div>
 		<br>
 		<br>
 		<br>
@@ -36,11 +38,54 @@
 <!-- **************** END PLAYER ONE NAV BAR **************** -->
 
 
+
+
+
+
+
 <!-- ******************** GAMEBOARD ************************* -->
 	<div id="gameboard">
-		<div id="boxes" ng-repeat="box in main.gameboard" ng-class="{box: box.name}">{{box.name}}</div>
+		<button id="boxes"
+		     ng-repeat="box in main.gameboard" 
+		     ng-class="{box: main.gameboard[$index]}"
+		     ng-click="main.picked"
+		     > 
+		     <p id="picked" ng-model="main.picked" ng-show="main.picked"></p>
+		</button>
 	</div>
 <!-- ******************** END OF GAMEBOARD ******************** -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <!-- ******************** PLAYER TWO NAV BAR ******************** -->
