--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-<!-- HEAD WITH SCRIPTS AND LINKS AND STYLESHEETS AND STUFF-->
 <head>
 	<title>Tic Tac Toe</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -12,8 +11,6 @@
 	<script type="text/javascript" src="js/controller.js"></script>
   	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
-
-<!-- END OF HEAD WITH SCRIPTS AND LINKS AND STYLESHEETS AND STUFF-->
 
 <body id="container" ng-app="TicTacToe" ng-controller="MainController as main">
 
@@ -35,50 +32,17 @@
 <!-- **************** END PLAYER ONE NAV BAR **************** -->
 
 
-
-
-
-
-
-
-
-
-
-
 <!-- ******************** GAMEBOARD ************************* -->
 	<div id="gameboard">
 
-		<div id="boxes" 
-		       ng-repeat="box in main.gameboard track by $index" 
-		       ng-class="{box: true, clicked: main.gameboard[$index].picked}" 
-		       ng-click="main.boxClicked($index)"
-		       >
-		</div>
-		
+	<div id="boxes" 
+	       ng-repeat="box in main.gameboard track by $index" 
+	       ng-class="{box: true, clicked_player_one: main.gameboard[$index].clicked_player_one, clicked_player_two: main.gameboard[$index].clicked_player_two}"
+	       ng-click="main.boxClicked($index)">
+	</div>
 
 	</div>
 <!-- ******************** END OF GAMEBOARD ******************** -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 <!-- ******************** PLAYER TWO NAV BAR ******************** -->
@@ -94,7 +58,7 @@
 		<div id="player-two-move">O</div>
 		
 	</div>
-<!-- ******************** END OF PLAYER TWO NAV BAR ***************** -->
+<!-- ******************** END OF PLAYER TWO NAV BAR ************* -->
 
 
 </body><!-- END OF CONTAINER -->
