--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
 <head>
 	<title>Tic Tac Toe</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="normalize.css">
 	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+	<!-- Angular --> 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
+	 <!-- Firebase -->
+        	<script src="https://cdn.firebase.com/js/client/2.2.2/firebase.js"></script>
+	<!-- AngularFire -->
+        	<script src="https://cdn.firebase.com/libs/angularfire/1.0.0/angularfire.min.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/controller.js"></script>
-  	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+  	
 </head>
 
 <body id="container" ng-app="TicTacToe" ng-controller="MainController as main">
@@ -19,6 +25,7 @@
 	
 		<div id="player-one-score"></div>
 		<div id="player-one-name">Player One</div>
+		<br>
 		<br>
 		<br>
 		<br>
@@ -36,8 +43,8 @@
 	<div id="gameboard">
 
 	<div id="boxes" 
-	       ng-repeat="box in main.gameboard track by $index" 
-	       ng-class="{box: true, clicked_player_one: main.gameboard[$index].clicked_player_one, clicked_player_two: main.gameboard[$index].clicked_player_two}"
+	       ng-repeat="box in main.syncFirebaseGameboard.gameboard track by $index" 
+	       ng-class="{box: true, clicked_player_one: main.syncFirebaseGameboard.gameboard[$index].clicked_player_one, clicked_player_two: main.syncFirebaseGameboard.gameboard[$index].clicked_player_two}"
 	       ng-click="main.boxClicked($index)">
 	</div>
 
