--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<br>
 		<br>
 		<br>
-		<div id="player-one-move">X</div>
+		<!-- <div id="player-one-move">X</div> -->
 		<br>
 		<br>
 
@@ -62,7 +62,7 @@
 		<br>
 		<br>
 		<br>
-		<div id="player-two-move">O</div>
+		<!-- <div id="player-two-move">O</div> -->
 		
 	</div>
 <!-- ******************** END OF PLAYER TWO NAV BAR ************* -->
